# DeltaRobot

./: .gitmodules  README.md  citations.txt  delta_kinematics.ipynb  example_kinematics.cpp  kinematics.py
deltarobot/: CMakeLists.txt  package.xml
deltarobot/config/: delta_config.yaml
deltarobot/include/: delta_kinematics.hpp  read_write_node.hpp
deltarobot/include/deltarobot/: delta_kinematics.hpp
deltarobot/launch/: kinematics.launch.xml
deltarobot/src/: delta_kinematics.cpp  read_write_node.cpp
deltarobot_control/: CMakeLists.txt  package.xml
deltarobot_control/include/deltarobot_control/: delta_test.hpp
deltarobot_control/launch/: delta_control.launch.xml  deltarobot_control.launch.xml
deltarobot_control/src/: delta_test.cpp
deltarobot_interfaces/: CMakeLists.txt  package.xml
deltarobot_interfaces/msg/: DeltaJointVels.msg  DeltaJoints.msg  DynamixelTrajectory.msg  FKTrajectory.msg  IKTrajectory.msg  PositionCmd.msg
deltarobot_interfaces/srv/: ConvertToJointTrajectory.srv  ConvertToJointVelTrajectory.srv  DeltaFK.srv  DeltaIK.srv  GetDynamixelPositions.srv  GetPositions.srv  PlayFKTrajectory.srv  PlayIKTrajectory.srv  PlayTrajectory.srv  TestTrajectory.srv
deltarobot_kinematics/: CMakeLists.txt  package.xml
deltarobot_kinematics/config/: delta_config.yaml
deltarobot_kinematics/include/: kinematics.hpp
deltarobot_kinematics/include/deltarobot_kinematics/: kinematics.hpp
deltarobot_kinematics/launch/: kinematics.launch.xml
deltarobot_kinematics/src/: kinematics.cpp
deltarobot_motion_planner/: CMakeLists.txt  package.xml
deltarobot_motion_planner/include/deltarobot_motion_planner/: delta_motion_planner.hpp
deltarobot_motion_planner/launch/: delta_motion_planner.launch.xml
deltarobot_motion_planner/src/: delta_motion_planner.cpp
deltarobot_motor_control/: CMakeLists.txt  package.xml
deltarobot_motor_control/include/deltarobot_motor_control/: delta_motor_control.hpp
deltarobot_motor_control/launch/: motor_control.launch.xml
deltarobot_motor_control/src/: delta_motor_control.cpp
deltarobot_sensors/: CMakeLists.txt  package.xml
deltarobot_trajectory_generator/: CMakeLists.txt  package.xml
deltarobot_trajectory_generator/include/deltarobot_trajectory_generator/: delta_trajectory_generator.hpp
deltarobot_trajectory_generator/launch/: delta_traj_gen.launch.xml
deltarobot_trajectory_generator/src/: delta_trajectory_generator.cpp
