<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deltarobot_trajectory_generator</name>
  <version>1.0.0</version>
  <description>Reference and Joint Trajectory Generator</description>
  <maintainer email="sharwin24@gmail.com">sharwin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>deltarobot_interfaces</depend>
  <depend>deltarobot_kinematics</depend>
  <depend>deltarobot_motor_control</depend>
  <depend>kalman_filter</depend>

  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
